app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 2
  template:
    metadata:
      labels:
        app: api
    spec:
      volumes:
      - name: code
        persistentVolumeClaim:
          claimName: code-pv-claim
      - name: config
        configMap:
          name: nginx-config
          items:
          - key: config
            path: default.conf
      containers:
      - name: api
        image: timguardian/talklike
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: code
          mountPath: /code
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: code
          mountPath: /code
        - name: config
          mountPath: /etc/nginx/conf.d
