ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "dev.talklike.kz"
    http:
      paths:
        - path: /
          backend:
            serviceName: api-service
            servicePort: 80
